--- a/_modules/gensound/exceptions.html
+++ b/_modules/gensound/exceptions.html
@@ -89,6 +89,23 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">frequency</span> <span class="o">=</span> <span class="n">frequencies</span></div>
 
 
+<div class="viewcode-block" id="DifferentChannelsError"><a class="viewcode-back" href="../../modules/exceptions.html#gensound.exceptions.DifferentChannelsError">[docs]</a><span class="k">class</span> <span class="nc">DifferentChannelsError</span><span class="p">(</span><span class="ne">ValueError</span><span class="p">):</span>
+    <span class="sd">&quot;&quot;&quot; The exception that raises when different number of channels of sounds</span>
+<span class="sd">    to joint</span>
+
+<span class="sd">    :var channels: List of n_channels of sounds.</span>
+<span class="sd">    &quot;&quot;&quot;</span>
+
+    <span class="k">def</span> <span class="nf">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">channels</span><span class="p">:</span> <span class="n">typing</span><span class="o">.</span><span class="n">Tuple</span><span class="p">[</span><span class="nb">int</span><span class="p">,</span> <span class="o">...</span><span class="p">])</span> <span class="o">-&gt;</span> <span class="kc">None</span><span class="p">:</span>
+        <span class="ne">ValueError</span><span class="o">.</span><span class="fm">__init__</span><span class="p">(</span>
+            <span class="bp">self</span><span class="p">,</span>
+            <span class="s1">&#39;all sounds must has a same number of channels but got </span><span class="si">{}</span><span class="s1">&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span>
+                <span class="nb">str</span><span class="p">(</span><span class="n">x</span><span class="p">)</span> <span class="k">for</span> <span class="n">x</span> <span class="ow">in</span> <span class="nb">set</span><span class="p">(</span><span class="n">channels</span><span class="p">)</span>
+            <span class="p">),</span>
+        <span class="p">)</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">channels</span> <span class="o">=</span> <span class="n">channels</span></div>
+
+
 <div class="viewcode-block" id="InvalidDurationError"><a class="viewcode-back" href="../../modules/exceptions.html#gensound.exceptions.InvalidDurationError">[docs]</a><span class="k">class</span> <span class="nc">InvalidDurationError</span><span class="p">(</span><span class="ne">ValueError</span><span class="p">):</span>
     <span class="sd">&quot;&quot;&quot; The exception that raises when passed sound was invalid duration</span>
 
