--- a/genindex.html
+++ b/genindex.html
@@ -127,6 +127,8 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="modules/sound.html#gensound.sound.Sound.data">data (gensound.sound.Sound attribute)</a>
 </li>
+      <li><a href="modules/exceptions.html#gensound.exceptions.DifferentChannelsError">DifferentChannelsError</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="modules/exceptions.html#gensound.exceptions.DifferentSamplerateError">DifferentSamplerateError</a>
